<resources>
    <string name="app_name">Mangement</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="password">password</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email</string>
    <string name="error_email">Enter valid Email Address</string>
    <string name="error_password">Please Enter Password</string>
    <string name="internet_is_unavailable">Internet is unavailable</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password</string>
    <string name="retry_password">Retry Password</string>
    <string name="we_just_need">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="register_password">Register Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="newpassword">New Password</string>
    <string name="menu_signout">Sign out</string>
    <string name="chat">Chat</string>
    <string name="status">Status</string>
    <string name="task">Task Creation</string>
    <string name="logout">Logout</string>
    <string name="nas_realtors">Nas Realtors</string>
    <string name="view_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="select_contact">Select Contact</string>
</resources>