<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.mangement.ui.activity.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/layName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            android:text="@={viewModel.nameValue}"
            app:hintTextColor="@color/textBlack"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.3"/>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/layEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@={viewModel.emailValue}"
            app:hintTextColor="@color/textBlack"
            android:hint="@string/email_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layName"
          app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/layPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:hintTextColor="@color/textBlack"
            android:text="@={viewModel.passwordValue}"
         android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layEmailAddress" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/retryPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/textBlack"
            android:text="@={viewModel.retryPasswordValue}"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/retry_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layPassword"/>



        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/text_golden"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/layPassword"
            app:layout_constraintEnd_toEndOf="@id/layPassword"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.5"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register"
            style="@style/AuthBotton"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:onClick="@{(v) -> viewModel.onRegister(v)}"
            android:text="@string/register"
            android:visibility="@{viewModel.progressLiveData.booleanValue()?View.GONE:View.VISIBLE}"
            app:layout_constraintVertical_bias="0.8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgetPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            />




        <ProgressBar
            android:id="@+id/progress_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:visibility="@{viewModel.progressLiveData.booleanValue()?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_forgetPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>